[package]
name = "thermal_printer"
description = "High level API for interacting with CSN-A2 thermal printer"
repository = "https://github.com/zklapow/thermal_printer"
keywords = ["thermal-printer", "serial", "embedded-hal", "embedded-hal-driver"]
categories = ["hardware-support", "no-std", "embedded"]
license = "Apache-2.0"
readme = "README.md"
version = "0.1.1"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
exclude = [
  "ci/*",
  "*.iml",
  ".travis.yml"
]
edition = "2018"

[badges]
travis-ci = { repository = "zklapow/thermal_printer" }

[dependencies]
embedded-hal = "^0.2"
nb = "0.1.1"

[dev-dependencies]
serial = "0.4.0"
serial-embedded-hal = "0.1.2"
